# pydebian

./: .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  release.yml
docs/: conf.py  index.md  index.rst
docs/explanation/: architecture.md  architecture.rst  debhelper-internals.md  debhelper-internals.rst  index.md  index.rst  why-wrap-perl.md  why-wrap-perl.rst
docs/how-to/: check-compat-level.md  check-compat-level.rst  determine-lts.md  determine-lts.rst  get-dh-sequence.md  get-dh-sequence.rst  index.md  index.rst  query-ubuntu-support.md  query-ubuntu-support.rst
docs/reference/: debhelper.md  debhelper.rst  distroinfo.md  distroinfo.rst  index.md  index.rst
docs/tutorials/: detecting-build-systems.md  detecting-build-systems.rst  getting-started.md  getting-started.rst  index.md  index.rst
src/pydebian/: __init__.py
src/pydebian/control/: __init__.py
src/pydebian/control/_perl_lib/Debian/: Control.pm
src/pydebian/control/_perl_lib/Debian/Control/: Stanza.pm
src/pydebian/control/_perl_lib/Debian/Control/Stanza/: Binary.pm  Source.pm
src/pydebian/debhelper/: __init__.py
src/pydebian/distroinfo/: __init__.py
tests/control/: test_control.py
tests/debhelper/: test_buildsystem.py
tests/distroinfo/: test_distroinfo.py
