[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydebian"
version = "0.1.0"
description = "Python adapter for Perl's Debian:: namespace via perlthon"
readme = "README.md"
license = "GPL-2.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "perlthon",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pydebian"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
